--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ button {
 }
 .page-container {
   min-height: 100vh;
+  overflow: hidden;
 }
 .btn {
   background-color: black;
